# fin_tracker

./: db.sqlite3  manage.py  pyproject.toml
fin_tracker/: asgi.py  settings.py  urls.py  wsgi.py
fn_app/: apps.py  forms.py  models.py  urls.py  views.py
fn_app/migrations/: 0001_initial.py
fn_app/templates/: dashboard.html  investment_confirm_delete.html  investment_form.html  investment_list.html
